Fixes button label overflow in sidebar

--- a/javascript/examples/grapheditor/www/styles/grapheditor.css
+++ b/javascript/examples/grapheditor/www/styles/grapheditor.css
@@ -230,6 +230,7 @@
 }
 .geSidebarContainer button {
 	text-overflow:ellipsis;
+	overflow:hidden;
 }
 .geToolbar {
 	padding:1px 0px 0px 6px;
